name: MoWSC
version: 0.0.1
cabal-version: >=1.6
build-type: Simple

executable MoWSC-exp
    build-depends: aeson -any, base -any, bytestring -any, containers -any, vector -any, deepseq -any, hxt -any, HandsomeSoup -any, lcs -any, unordered-containers -any, cmdargs -any, mersenne-random-pure64 -any, MonadRandom -any, ghc-prim -any, hxt-tagsoup -any
    main-is: Exp.hs
    ghc-options: -O2
    buildable: True
    hs-source-dirs: src
    include-dirs: c_src
    extra-lib-dirs: c_src
    extra-libraries: evaluation, spea2

executable MoWSC-convert
    main-is: Convert.hs
    ghc-options: -O2
    buildable: True
    hs-source-dirs: src
